--- a/tutorials/IBER24.Rmd
+++ b/tutorials/IBER24.Rmd
@@ -17,7 +17,9 @@ text-align: justify}
 
 <br/>
 <br/>
-<img height=300 width=270 src="logo_hex.png"> </a>
+<p align="center">
+<img height=300 width=300 src="logo_hex_irec.png"> </a>
+</p>
 <font size="3">
 <br/>
 
