--- a/tutorials/IBER24.Rmd
+++ b/tutorials/IBER24.Rmd
@@ -55,9 +55,9 @@ Gran parte de este curso, incluidos algunos materiales, diseño de la web y el c
   
 ### Día 2 - Modelos ecológicos más avanzados
 
-  1. Modelos de Ocupación
-  2. Modelos _N-mixture_
-  3. _Spatial Capture-Recpature_
+  1. Modelos de Ocupación. [Presentaciones](https://jabiologo.quarto.pub/bloaque_2_1_teoria) y [Script]()
+  2. Modelos _N-mixture_. [Presentaciones]() y [Script]()
+  3. _Spatial Capture-Recpature_. [Presentaciones](https://vlauret.quarto.pub/diberticurso_5_scr) y [Script](https://raw.githubusercontent.com/valentinlauret/diberticurso/main/codes/5_SCR.R)
   
 ### Día 3 - Aplicaciones
 
