--- a/Tutorials.Rmd
+++ b/Tutorials.Rmd
@@ -55,4 +55,6 @@ text-align: justify
 
 [Taller introductorio a la Inferencia Bayesiana en Ecología con R y NIMBLE](https://jabiologo.github.io/web/tutorials/IBER24.html)
 
+# Estadística básica en ciencias experimentales (Spanish)
 
+[Estadística básica en ciencias experimentales](https://jabiologo.github.io/web/tutorials/estadisticaBasica.html)
