--- a/tutorials/estadisticaBasica.Rmd
+++ b/tutorials/estadisticaBasica.Rmd
@@ -115,7 +115,41 @@ Una de las grandes ventajas (o inconvenientes?) de R es que es un software libre
 <br/><br/>
 #### **Los objetos**
 
-* Clases
+Los **objetos** en R son los contenedores donde almacenamos los resultados (outputs) de las funciones. Podemos identificarlos porque suelen aparecer por primera vez precediendo a los caracteres `<-`, que simbolizan una flecha que señala hacia la izquierda. Cada vez que se quiera crear un objeto se le ha de dar un nombre, el que queramos, aunque suele ser conveniente darle un nombre que tenga sentido. Por ejemplo, vamos a almacenar en un objeto que vamos a llamar "numeros" la concatenación de valores que creamos anteriormente:
+
+```{r ch4, message=F, cache = T, eval = T}
+# Almacenamos en un objeto llamado "numeros" el resultado de concatenar 3, 7, 12 y 4
+numeros <- c(3, 7, 12, 4)
+
+# Ahora podemos "llamar" a "numeros" para ver qué tiene dentro
+numeros
+
+# También podemos utilizar a "numeros" dentro de otra función, por ejemplo mean()
+mean(numeros)
+
+# Por último podemos guardar dentro de otro objeto el resultado de la linea anterior
+
+m <- mean(numeros)
+m
+```
+
+ Todos los objetos en R tienen una clase, que informa sobre el tipo de objeto que es. Por ejemplo, si es un vector de números será `numeric`, pero si lo que almacena son caracteres su clase será `character`. Hay muschísimas clases de objetos (¡incluso se pueden crear clases nuevas!). Conocer la clase de nuestros objetos es muy important, puesto que **algunas funciones necesitan que sus argumentos sean de una clase específica**, y sino no funcionarán. Por ejemplo, no podemos hacer la media de las letras "a", "b" y "c", pero sí podremos hacer la media de los números 1, 2 y 3.
+
+```{r ch5, message=T, cache = T, eval = T}
+# Para averiguar la clase de un objeto usamos la función class()
+class(numeros)
+
+# Vamos a crear un objeto con los caracteres "a", "b" y "c"
+letras <- c("a", "b", "c")
+
+# Exploramos la clase de letras
+class(letras)
+
+# Vamos a intentar hacer la media de letras
+mean(letras)
+
+```
+
 <br/><br/>
 
 #### **Directorio y entorno de trabajo**
